syntax = "proto3";

option go_package = "../pb;pb";

service Rpc {
  rpc GetAllBlock(GetAllBlockReq) returns (GetAllBlockResp) {}
}
// ----------- GetAllBlock -------------
message GetAllBlockReq {}

message GetAllBlockResp {
  message Block {
    string height = 1;
    string time = 2;
    string coinbase = 3;
    string txs = 4;
    string reward = 5;
  }
  repeated Block block = 1;
}
// -------------------------------------